@@ -13,6 +13,8 @@ Features added
 Bugs fixed
 ----------
 
+* Setting element.text to '' returned None on request, not the empty string
+
 * ``iterparse()`` could crash on long XML files
 
 * Setting an attribute to a non-string value did not raise an exception
